@@ -1,3 +1,8 @@
+2010-10-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* runbench.tcl: clean up arg handling, add -single $bool option to
+	run all tests in same interp instance (default no == separate).
+
 2010-09-27  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* normbench.tcl: support -normalize "none" to mean just change
